# libfritzpp

./: .gitignore  CMakeLists.txt  CallList.cpp  CallList.h  Config.cpp  Config.h  Doxyfile  Fonbook.cpp  Fonbook.h  FonbookManager.cpp  FonbookManager.h  Fonbooks.cpp  Fonbooks.h  FritzClient.cpp  FritzClient.h  FritzFonbook.cpp  FritzFonbook.h  HISTORY  HttpClient.cpp  HttpClient.h  Listener.cpp  Listener.h  LocalFonbook.cpp  LocalFonbook.h  LookupFonbook.cpp  LookupFonbook.h  Makefile  Nummerzoeker.cpp  Nummerzoeker.h  OertlichesFonbook.cpp  OertlichesFonbook.h  SoapClient.cpp  SoapClient.h  TcpClient.cpp  TcpClient.h  TelLocalChFonbook.cpp  TelLocalChFonbook.h  Tools.cpp  Tools.h  XmlFonbook.cpp  (+1 more)
cc++/: mime.cpp  mime.h  readme.txt  soap.cpp  soap.h  url.cpp  url.h  urlstring.cpp
liblog++/: Log.cpp  Log.h  Makefile
libnet++/: HttpClient.cpp  SoapClient.h  TcpClient.cpp  TcpClient.h
libnet++/test/: HttpClient.cpp  Makefile
libnet++/test/gtest/: Makefile
test/: BasicInitFixture.h  Config.cpp  FBServer.cpp  FBServer.h  FakeBoxClient.h  FakeNoopClient.h  FakeSimpleClient.h  Fonbook.cpp  FritzClient.cpp  FritzFonbook.cpp  FritzTest.cpp  HttpClient.cpp  Listener.cpp  Makefile  Makefile.serverdaemon  OertlichesFonbook.cpp  ServerDaemon.cpp  TelLocalChFonbook.cpp  Tools.cpp  test.pro
test.old/: FritzTest.cpp  Makefile.serverdaemon  ServerDaemon.cpp  test.pro
test.old/74.04.86/: fonbuch_xml  siplist  sipoptionen
test/74.04.86/: empty_response  error_404  fonbuch  fonbuch_xml  foncalls  foncalls_csv  login_sid
test/gtest/: Makefile
